welcome.lessons.welcome.array.island.Island.scala.error
island:6: error: reassignment to val
			a = num(i)
                          ^island:8: error: reassignment to val
				r = r+1
                                  ^