welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
	def r = 0
	def a = 0
	for(i <- 0 to num.length - 1){
		if(num(i) != a){
			a = num(i)
			if( a==0){
				r = r+1
			}
			}	
	}
	return r
}
